--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -4,131 +4,249 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/user_registraion"
+    android:background="@color/white"
     tools:context=".User_Registration">
 
-    <EditText
-        android:id="@+id/ed_nameregu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="192dp"
-        android:layout_marginEnd="76dp"
-        android:backgroundTint="@color/grey"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:textColor="@color/black"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/ed_bloodregu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="72dp"
-        android:backgroundTint="@color/grey"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:textColor="@android:color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_nameregu" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/ed_phoneregu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="72dp"
-        android:backgroundTint="@color/grey"
-        android:ems="10"
-        android:hint="@string/app_name"
-        android:inputType="phone"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_bloodregu"
-        tools:ignore="TouchTargetSizeCheck" />
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="106dp"
+                android:layout_height="79dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="152dp"
+                android:layout_marginTop="80dp"
+                android:layout_marginEnd="153dp"
+                app:srcCompat="@drawable/app_logo" />
 
-    <EditText
-        android:id="@+id/ed_addressregu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="72dp"
-        android:backgroundTint="@color/grey"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_phoneregu"
-        tools:ignore="TouchTargetSizeCheck" />
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView5"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/poppins_bold"
+                android:text="RELIVE"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
-    <EditText
-        android:id="@+id/ed_emailregu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="72dp"
-        android:backgroundTint="@color/grey"
-        android:ems="10"
-        android:hint="@string/app_name"
-        android:inputType="textEmailAddress"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_addressregu"
-        tools:ignore="TouchTargetSizeCheck" />
 
-    <EditText
-        android:id="@+id/ed_passregu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="72dp"
-        android:backgroundTint="@color/grey"
-        android:ems="10"
-        android:hint="@string/app_name"
-        android:inputType="textPassword"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_emailregu"
-        tools:ignore="TouchTargetSizeCheck" />
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textView10"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="60dp"
+                android:layout_marginBottom="20dp"
+                android:fontFamily="@font/open_sans_bold"
+                android:text="Create new Account"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
-    <EditText
-        android:id="@+id/ed_cpassregu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="72dp"
-        android:backgroundTint="@color/grey"
-        android:ems="10"
-        android:hint="@string/app_name"
-        android:inputType="textPassword"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_passregu"
-        tools:ignore="TouchTargetSizeCheck" />
+            <EditText
+                android:id="@+id/ed_nameregu"
+                android:layout_width="400dp"
+                android:layout_height="60dp"
+                android:layout_below="@id/textView11"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="100dp"
+                android:background="@drawable/ed_border"
+                android:drawableStart="@drawable/ic_baseline_person_24"
+                android:drawablePadding="-30dp"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Name"
+                android:inputType="textPersonName"
+                android:minHeight="30dp"
+                android:paddingLeft="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
-    <Button
-        android:id="@+id/b4_regu"
-        android:layout_width="280dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="44dp"
-        android:backgroundTint="@color/darkyellow"
-        android:text="REGISTER"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_cpassregu" />
+            <EditText
+                android:id="@+id/ed_bloodregu"
+                android:layout_width="400dp"
+                android:layout_height="60dp"
+                android:layout_below="@id/ed_nameregu"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="100dp"
+                android:background="@drawable/ed_border"
+                android:drawableStart="@drawable/ic_blood"
+                android:drawablePadding="-30dp"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Blood Type"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                android:paddingLeft="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ed_nameregu" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="44dp"
-        android:text="Login"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/b4_regu" />
+            <EditText
+                android:id="@+id/ed_phoneregu"
+                android:layout_width="400dp"
+                android:layout_height="60dp"
+                android:layout_below="@id/ed_bloodregu"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="100dp"
+                android:background="@drawable/ed_border"
+                android:drawableLeft="@drawable/ic_phone"
+                android:drawablePadding="-30dp"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Phone "
+                android:inputType="phone"
+                android:paddingLeft="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <EditText
+                android:id="@+id/ed_addressregu"
+                android:layout_width="400dp"
+                android:layout_height="100dp"
+                android:layout_below="@id/ed_phoneregu"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="100dp"
+                android:background="@drawable/ed_border"
+                android:drawableLeft="@drawable/ic_address"
+                android:drawablePadding="-30dp"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Address"
+                android:inputType="textPersonName"
+                android:paddingLeft="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ed_phoneregu"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <EditText
+                android:id="@+id/ed_emailregu"
+                android:layout_width="400dp"
+                android:layout_height="60dp"
+                android:layout_below="@id/ed_addressregu"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="100dp"
+                android:background="@drawable/ed_border"
+                android:drawableLeft="@drawable/ic_email"
+                android:drawablePadding="-30dp"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:paddingLeft="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <EditText
+                android:id="@+id/ed_passregu"
+                android:layout_width="400dp"
+                android:layout_height="60dp"
+                android:layout_below="@id/ed_emailregu"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="100dp"
+                android:background="@drawable/ed_border"
+                android:drawableLeft="@drawable/ic_password"
+                android:drawablePadding="-30dp"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:paddingLeft="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ed_emailregu"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <EditText
+                android:id="@+id/ed_cpassregu"
+                android:layout_width="400dp"
+                android:layout_height="60dp"
+                android:layout_below="@id/ed_passregu"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="100dp"
+                android:background="@drawable/ed_border"
+                android:drawableLeft="@drawable/ic_password"
+                android:drawablePadding="-30dp"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Confirm Password"
+                android:inputType="textPassword"
+                android:paddingLeft="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ed_passregu"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <Button
+                android:id="@+id/b4_regu"
+                android:layout_width="400dp"
+                android:layout_height="50dp"
+                android:layout_below="@id/ed_cpassregu"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="100dp"
+                android:backgroundTint="@color/welcome"
+                android:text="REGISTER"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ed_cpassregu" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/b4_regu"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginEnd="100dp"
+                android:text="Already Registered? Sign in here"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/b4_regu" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="-20dp"
+                app:srcCompat="@drawable/reg_imgview"
+                android:layout_below="@id/textView2"
+                android:layout_centerHorizontal="true"/>
+
+
+        </RelativeLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
