--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -4,44 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/user_login"
+    android:background="@drawable/bg_image"
     tools:context=".User_Login">
 
     <EditText
         android:id="@+id/ed_emaillogu"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginStart="59dp"
-        android:layout_marginTop="396dp"
-        android:layout_marginEnd="143dp"
-        android:backgroundTint="@color/grey"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="75dp"
+        android:background="@drawable/ed_border"
+        android:drawableLeft="@drawable/ic_email"
+        android:drawablePadding="-30dp"
         android:ems="10"
-        android:hint="@string/app_name"
+        android:gravity="center"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
+        android:paddingLeft="15dp"
         android:shadowColor="@color/black"
         android:textColor="@color/black"
+        android:textColorHint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.126"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <EditText
         android:id="@+id/ed_passlogu"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="142dp"
-        android:backgroundTint="@color/grey"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="75dp"
+        android:background="@drawable/ed_border"
+        android:drawableLeft="@drawable/ic_password"
+        android:drawablePadding="-30dp"
         android:ems="10"
-        android:hint="@string/app_name"
+        android:gravity="center"
+        android:hint="Password"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:paddingLeft="15dp"
         android:shadowColor="@color/black"
         android:textColor="@color/black"
+        android:textColorHint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.14"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ed_emaillogu" />
 
@@ -49,22 +57,65 @@
         android:id="@+id/b3_logu"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
-        android:backgroundTint="@color/darkyellow"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="75dp"
+        android:backgroundTint="@color/welcome"
         android:text="LOG IN"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ed_passlogu" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="40dp"
-        android:text="Register here"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="130dp"
+        android:text="New User? Register here"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/b3_logu" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="106dp"
+        android:layout_height="79dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="151dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/app_logo" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
+        android:text="RELIVE"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toStartOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="41dp"
+        android:fontFamily="@font/open_sans_bold"
+        android:text="Login"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toStartOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 </androidx.constraintlayout.widget.ConstraintLayout>
