--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -72,6 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="34dp"
+        android:fontFamily="@font/open_sans_semibold"
         android:text="Your details will be sent to nearby"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -84,6 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:fontFamily="@font/open_sans_semibold"
         android:text=" hospital if you don't respond."
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -100,6 +102,7 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="188dp"
         android:layout_marginBottom="120dp"
+        android:fontFamily="@font/open_sans_bold"
         android:text="Cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
